<resources>
    <string name="app_name">My Application</string>
    <string name="start">Start</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">player 2</string>
    <string name="enter_your_names">Enter Your Names</string>
    <string name="submmit_names">Submmit Names</string>
    <string name="_00_00">00:00</string>
    <string name="player_name">player name</string>
    <string name="No_winner">No winner</string>
    <string name="win">win</string>
    <string name="play_again">Play Again</string>
</resources>