<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/background">


    <RelativeLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="571dp"
        android:layout_below="@+id/Tv_Title"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <EditText
            android:id="@+id/Et_player1"
            android:layout_width="183dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="189dp"
            android:layout_marginTop="135dp"
            android:layout_marginEnd="38dp">

        </EditText>

        <EditText
            android:id="@+id/et_player2"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="189dp"
            android:layout_marginTop="321dp"
            android:layout_marginEnd="38dp"></EditText>

        <TextView
            android:id="@+id/tv_player2"
            android:layout_width="175dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="199dp"
            android:layout_marginTop="263dp"
            android:layout_marginEnd="46dp"
            android:fontFamily="@font/anton"
            android:text="@string/player_2"
            android:textAlignment="center"
            android:textSize="30sp">

        </TextView>

        <TextView
            android:id="@+id/tv_player3"
            android:layout_width="175dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="194dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="51dp"
            android:fontFamily="@font/anton"
            android:text="@string/player_1"
            android:textAlignment="center"
            android:textSize="30sp">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="136dp"
            android:layout_marginTop="477dp"
            android:layout_marginEnd="129dp"
            android:background="@drawable/orange_button"
            android:text="@string/submmit_names"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/Iv_circle_player1"
            android:layout_width="wrap_content"
            android:layout_height="126dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="254dp"
            app:srcCompat="@drawable/white_circle_players" />

        <ImageView
            android:id="@+id/iv_circle_player2"
            android:layout_width="wrap_content"
            android:layout_height="126dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="266dp"
            android:layout_marginEnd="249dp"
            app:srcCompat="@drawable/white_circle_players" />

        <ImageView
            android:id="@+id/Img_player2"
            android:layout_width="wrap_content"
            android:layout_height="114dp"
            android:layout_below="@+id/Img_player1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="69dp"

            android:layout_marginEnd="249dp"
            app:srcCompat="@drawable/player2" />

        <ImageView
            android:id="@+id/Img_player1"
            android:layout_width="115dp"
            android:layout_height="121dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="257dp"
            app:srcCompat="@drawable/player1" />
    </RelativeLayout>

    <TextView
        android:id="@+id/Tv_Title"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/anton"
        android:letterSpacing="0.15"
        android:shadowColor="@color/white"
        android:shadowDx="7"
        android:shadowDy="7"
        android:shadowRadius="1.5"
        android:text="@string/enter_your_names"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold">

    </TextView>

</RelativeLayout>