<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@color/background">


    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp">

        <TextView
            android:id="@+id/tv_player1"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="86dp"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="16dp"
            android:layout_toStartOf="@+id/tv_player2"
            android:text="@string/player_1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_player2"
            android:layout_width="86dp"
            android:layout_height="29dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="115dp"
            android:layout_marginEnd="91dp"
            android:layout_marginBottom="16dp"
            android:text="@string/player_2"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp">


        <LinearLayout
            android:id="@+id/rl_buttons_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button0"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="21dp"
                android:layout_toStartOf="@+id/button1"
                android:background="@drawable/game_rectangle"
                android:textSize="90sp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:layout_toStartOf="@+id/button2"
                android:background="@drawable/game_rectangle"
                android:textSize="90sp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/game_rectangle"
                android:textSize="90sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_buttons_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_buttons_top">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="21dp"
                android:layout_toStartOf="@+id/button4"
                android:background="@drawable/game_rectangle"
                android:textSize="90sp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:layout_toStartOf="@+id/button5"
                android:background="@drawable/game_rectangle"
                android:textSize="90sp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/game_rectangle"
                android:textSize="90sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_buttons_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_buttons_middle">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="21dp"
                android:layout_toStartOf="@+id/button7"
                android:background="@drawable/game_rectangle"
                android:textSize="90sp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:layout_toStartOf="@+id/button8"
                android:background="@drawable/game_rectangle"
                android:textSize="90sp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/game_rectangle"
                android:textSize="90sp"
                android:layout_weight="1"/>

        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/timer"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="273dp"
        android:layout_marginTop="551dp"
        android:layout_marginEnd="24dp"
        android:text="@string/_00_00"
        android:textAlignment="center"
        android:textSize="25sp" />

</RelativeLayout>